<resources>
    <string name="app_name">DocScan</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share_as_pdf">Share as PDF</string>
    <string name="open_pdf">Open PDF</string>
    <!--cropper names -->
    <string name="original_image">Original</string>
    <string name="realign">Re-Align</string>
    <string name="black_and_white">B &amp; W</string>
    <string name="monochrome">Monochrome</string>
    <string name="rotate">Rotate</string>
    <string name="recognized_text">Recognized Text:</string>
    <string name="done">Done</string>
    <string name="extract_text">Extract Text</string>
    <string name="crop">Crop</string>
    <string name="save_pdf">Save PDF</string>
    <string name="filename">Filename:</string>
    <string name="enter_filename">Enter Filename</string>
    <string name="main_image_display">Main Image Display</string>
    <string name="proceed">Proceed</string>
    <string name="theme">Dark Theme</string>
    <string name="select_pdf_size">Select PDF size:</string>
    <string name="menu">Menu</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="shoot_image">Shoot Image</string>
    <string name="pick_from_gallery">Pick from Gallery</string>
    <string name="flash_setting">Flash Setting</string>
    <string name="original_size">Original Size</string>
    <string name="compressed_size">Compressed size (50%).</string>
    <string name="please_wait_saing_pdf">Please Wait Saing PDF.</string>

    <!-- Array for spinner item-->
    <string-array name="stroke_type_array">
        <item name="select_stroke_type">Select Stroke Type</item>
        <item name="pen">Pen</item>
        <item name="highlight">Highlight</item>
    </string-array>
    <string-array name="stroke_width_array">
        <item name="select_stroke_type">Select Brush Width</item>
        <item name="5">5</item>
        <item name="10">10</item>
        <item name="15">15</item>
        <item name="20">20</item>
    </string-array>
</resources>