<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_marginBottom="10dp"
                android:textColor="@color/textcolor"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/select_pdf_size"/>
            <TextView
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_slab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_size"
                android:id="@+id/original_size"/>
            <TextView
                android:text="@string/compressed_size"
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_slab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reduced_size"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>