<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/coordinator"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".captured_image_display">
        <include android:id="@+id/toolbar_layout_cid"
            layout="@layout/toolbar"/>
        <LinearLayout
            android:layout_below="@id/toolbar_layout_cid"
            android:layout_marginTop="5dp"
            android:weightSum="3"
            android:id="@+id/to_save_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_slab_bold"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filename"/>
            <EditText
                android:autofillHints="@string/enter_filename"
                android:inputType="text"
                android:hint="@string/enter_filename"
                android:textColorHint="@color/textcolor"
                android:textColor="@color/textcolor"
                android:id="@+id/filename_to_be_set"
                android:fontFamily="@font/roboto_slab_light"
                android:layout_weight="1"
                android:padding="10dp"
                android:minWidth="200dp"
                android:maxWidth="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/save_pdf_color_text"
                android:fontFamily="@font/roboto_slab"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_pdf"
                android:id="@+id/save_pdf_action"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@id/to_save_details"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/image_displayer"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_more_images"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_add"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>